# Hexphyr-OS

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
bootabi/: Cargo.toml
bootabi/src/: lib.rs
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: linker.ld  main.rs
drivers/pci/: pci.c  pci.h
drivers/serial/: serial.c  serial.h
kernel/: Cargo.toml  build.sh  linker.ld  run.sh
kernel/.cargo/: config.toml
kernel/iso/boot/: kernel.elf
kernel/iso/boot/grub/: grub.cfg
kernel/src/: boot.s  gdt.rs  gui.rs  initramfs.rs  interrupts.rs  linker.ld  main.rs  memory.rs  multiboot.rs  multiboot2_header.rs  serial.rs
kernel/src/arch/x86_64/: paging.rs
rootfs/etc/: issue
rootfs/sbin/: init
tools/: docker-sim.sh  mkimage.py  run-ovmf.sh  run-secureboot.sh  simulate-kernel.sh
tools/secureboot/: README.md  generate-owner-keys.sh  sign-efi.sh
userland/init/: init.c
userland/sh/: smallsh.c
