[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14.11"
bit_field = "0.10"
bitflags = "2.4"
spin = "0.9.8"
log = { version = "0.4", default-features = false }
cfg-if = "1.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
